testing php functions in booking html

--- a/Booking.html
+++ b/Booking.html
@@ -167,7 +167,7 @@ WEBSITE : HOMEPAGE OF A HOTEL'S WEBSITE
                     </div><!--/span-->		
 					
 					<strong style="margin-left:20px"> Choose Location </strong>
-					<select type="text" class="input-medium" style="margin-left:79px;">
+					<select type="text" name="city" id="city" class="input-medium" style="margin-left:79px;">
 					<?php
     
 					  $hotel_query = $db->query("SELECT distinct city FROM `Hotel`");
