--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ WEBSITE : HOMEPAGE OF A HOTEL'S WEBSITE
 			  <br/><li class="active" style="font-size:18px"><a href="Hotel Renaissance.html">Homepage</a></li>
               <br/>
 			  <li class="nav-header" style="font-size:18px"><i class="icon-tags"></i> BOOKINGS</li>
-              <br/><li><a href="Booking.html" style="font-size:18px">Book Here</a></li>
+              <br/><li><a href="Booking.php" style="font-size:18px">Book Here</a></li>
 			  <br/><li><a href="View.html" style="font-size:18px">View Your Booking</a></li>
 			  <br/><li><a href="Modify.html" style="font-size:18px">Modify Your Booking</a></li>
 			  <br/><li><a href="Cancel.html" style="font-size:18px">Cancel Your Booking</a></li>
