--- a/Login.html
+++ b/Login.html
@@ -153,7 +153,7 @@ WEBSITE : HOMEPAGE OF A HOTEL'S WEBSITE
 					<h5 style="margin-left:20px">You need to log into you account for bookings and modifications.</h5>
 					<br/>
 		            <div class="row-fluid" style="margin-left:20px">
-						<form id="loginform" class="form-signin" action="check_login.php">
+						<form id="loginform" class="form-signin" action="check_login.php" method="post">
 						<input id="myusername" style="width:200px;" type="text" class="input-block-level" placeholder="Email address">
 						<br/><input id="mypassword" style="width:200px;" type="password" class="input-block-level" placeholder="Password">
 						<br/><button class="btn btn-primary" type="submit">Login</button>
