--- a/Login.html
+++ b/Login.html
@@ -154,8 +154,8 @@ WEBSITE : HOMEPAGE OF A HOTEL'S WEBSITE
 					<br/>
 		            <div class="row-fluid" style="margin-left:20px">
 						<form id="loginform" class="form-signin" action="check_login.php" method="post">
-						<input id="myusername" style="width:200px;" type="text" class="input-block-level" placeholder="Email address">
-						<br/><input id="mypassword" style="width:200px;" type="password" class="input-block-level" placeholder="Password">
+						<input id="myusername" name="myusername" style="width:200px;" type="text" class="input-block-level" placeholder="Email address">
+						<br/><input id="mypassword" name="mypassword" style="width:200px;" type="password" class="input-block-level" placeholder="Password">
 						<br/><button class="btn btn-primary" type="submit">Login</button>
 						</form>
                     </div><!--/span-->		
