testing signup to guest

--- a/Login.html
+++ b/Login.html
@@ -159,7 +159,7 @@ WEBSITE : HOMEPAGE OF A HOTEL'S WEBSITE
 						<br/><button class="btn btn-primary" type="submit">Login</button>
 						</form>
                     </div><!--/span-->		
-					<h5 style="margin-left:20px">In case you do not have an account already <a href="Signup.html"">Signup</a>.</h5>
+					<h5 style="margin-left:20px">In case you do not have an account already <a href="Signup.php"">Signup</a>.</h5>
 					
         </div><!--/hererow-->
 
