--- a/Modify.html
+++ b/Modify.html
@@ -122,17 +122,17 @@ WEBSITE : HOMEPAGE OF A HOTEL'S WEBSITE
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
 			  <li class="nav-header" style="font-size:18px"><i class="icon-home"></i> HOME</li>
-			  <br/><li style="font-size:18px"><a href="Hotel Renaissance.html">Homepage</a></li>
+			  <br/><li style="font-size:18px"><a href="index.php">Homepage</a></li>
               <br/>
 			  <li class="nav-header" style="font-size:18px"><i class="icon-tags"></i> BOOKINGS</li>
-              <br/><li><a href="Booking.html" style="font-size:18px">Book Here</a></li>
+              <br/><li><a href="Booking.php" style="font-size:18px">Book Here</a></li>
 			  <br/><li><a href="View.html" style="font-size:18px">View Your Booking</a></li>
 			  <br/><li class="active" ><a href="Modify.html" style="font-size:18px">Modify Your Booking</a></li>
 			  <br/><li><a href="Cancel.html" style="font-size:18px">Cancel Your Booking</a></li>
 			  <br/>
 			  <br/>
 			  <br/>
-			  <li><a href="Booking.html"><button id="booknow" class="btn btn-medium btn-warning" type="button" style="margin-left: 30px; font-size: 24px; width: 200px; height: 50px;"><strong>Click To Book!</strong></button></a></li>
+			  <li><a href="Booking.php"><button id="booknow" class="btn btn-medium btn-warning" type="button" style="margin-left: 30px; font-size: 24px; width: 200px; height: 50px;"><strong>Click To Book!</strong></button></a></li>
                 			  
             </ul>
           </div><!--/.well -->
