Changed the links

--- a/Cancel.html
+++ b/Cancel.html
@@ -230,7 +230,7 @@ WEBSITE : HOMEPAGE OF A HOTEL'S WEBSITE
 					<br/>
 					<div style="margin-left:20px">
 					<a href="Login.html"><button type="submit" class="btn btn-primary">Confirm Cancellation</button></a>
-					<a href="Hotel Renaissance.html"><button type="button" class="btn">Back</button></a>
+					<a href="index.php"><button type="button" class="btn">Back</button></a>
 					</div>
         </div><!--/hererow-->
 
