--- a/Modify.html
+++ b/Modify.html
@@ -231,7 +231,7 @@ WEBSITE : HOMEPAGE OF A HOTEL'S WEBSITE
 					<br/>
 					<div style="margin-left:20px">
 					<a href="Login.html"><button type="submit" class="btn btn-primary">Modify Now!</button></a>
-					<a href="Hotel Renaissance.html"><button type="button" class="btn">Back</button></a>
+					<a href="index.php"><button type="button" class="btn">Back</button></a>
 					</div>
 					<h5 style="margin-left:20px">In case you would like to cancel your booking click <a href="Cancel.html"">Cancel Booking</a>.</h5>
         </div><!--/hererow-->
