Changed title for login

--- a/Login.html
+++ b/Login.html
@@ -9,7 +9,7 @@ WEBSITE : HOMEPAGE OF A HOTEL'S WEBSITE
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>The Renaissance Group</title>
+    <title>The Fortuna Group</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
